Fixed overlapping on resize for games

--- a/blog/static/blog/Game_style.css
+++ b/blog/static/blog/Game_style.css
@@ -92,7 +92,7 @@ body {
 #element2 {
   display:inline-block; 
   width:35%; 
-  padding:10px; 
+  padding:5px; 
   margin-top:-100px; 
   box-shadow: 0 8px 8px 0 rgba(0,0,0,0.2);
   font-weight:lighter;
@@ -105,8 +105,7 @@ body {
   -moz-appearance:button;
   -webkit-appearance:button;
   display: inline-block;
-  padding: 2px 5px;
-  margin-top:-25%;
+  padding:5px;
   color:black;
   border:1px solid black;
   border-radius:12px;
